Victor/CSS/styles.css
.tiffblue{
	background-color:#60DFE5;
}
.title{
	text-align: center;
	padding-top: 25px;
	padding-bottom: 25px;
}
.submitBtn{
	padding-top: 10px;
	padding-left: 15px;
	padding-bottom: 20px;
}

